--- a/HomeLink/support.html
+++ b/HomeLink/support.html
@@ -97,7 +97,7 @@
 
         .search_field {
             background: linear-gradient(to right, white, #EDBAFF), url('images/search-normal.svg') no-repeat right 10px center;
-            background-size: auto, 20px; /* Auto for gradient, 20px for search icon */
+            background-size: auto, 20px; 
             border: none;
             border-radius: 10px;
         }
@@ -105,6 +105,10 @@
         .search_field input {
             background: none;
             border: none;
+        }
+
+        .card {
+            display: none;
         }
     </style>
 
@@ -170,31 +174,35 @@
                         <form class="container-fluid d-flex justify-content-center">
                             <div class="input-group search_field">
                                 <input type="text" class="form-control" placeholder="What do you need help with?"
-                                    aria-label="Username" aria-describedby="basic-addon1">
+                                    aria-label="Username" aria-describedby="basic-addon1" id="searchInput">
                             </div>
                             <div class="input-group search_icon_field">
+                                <button style="border: none;
+                                background: none;
+                                padding: 0;
+                                margin: 0;
+                                cursor: pointer;" id="searchButton">
                                 <input type="text" class="form-control search_icon"
                                     aria-label="Username" aria-describedby="basic-addon1">
+                                </button>
                             </div>
                         </form>
                     </nav>
                     <div class="col-sm-12 mb-3 mb-sm-0 mt-4">
                         <div class="card custom_card" style="background-color: #0E45B7;">
                             <div class="card-body text-white">
-                                <h5 class="card-title">Special title treatment</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional
-                                    content.</p>
-                                <a href="#" class="btn btn-light">Go somewhere</a>
+                                <h5 class="card-title">Humidity Not Responding
+                                <p class="card-text">Humidity not responding? Check here for...</p>
+                                <a href="#" class="btn btn-light">See More</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-12 mb-3 mb-sm-0 mt-4">
                         <div class="card custom_card" style="background-color: #0E45B7;">
                             <div class="card-body text-white">
-                                <h5 class="card-title">Special title treatment</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional
-                                    content.</p>
-                                <a href="#" class="btn btn-light">Go somewhere</a>
+                                <h5 class="card-title">Security Cameras' Not Working</h5>
+                                <p class="card-text">In this case to fix your cameras' you have to...<b></b></p>
+                                <a href="#" class="btn btn-light">See More</a>
                             </div>
                         </div>
                     </div>
@@ -216,6 +224,23 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+        <script>
+            document.getElementById('searchButton').addEventListener('click', function (event) {
+                event.preventDefault();
+
+                var searchInput = document.getElementById('searchInput').value.toLowerCase();
+                var cards = document.querySelectorAll('.card');
+
+                cards.forEach(function (card) {
+                    var title = card.querySelector('.card-title').textContent.toLowerCase();
+                    if (title.includes(searchInput)) {
+                        card.style.display = 'block';
+                    } else {
+                        card.style.display = 'none';
+                    }
+                });
+            });
+        </script>
 </body>
 
 </html>
