committing new pages for settings page

--- a/HomeLink/reset.html
+++ b/HomeLink/reset.html
@@ -154,51 +154,20 @@
                         <h3>Settings</h3>
                     </div>
                     <div class="col-md-6 col-sm-12">
-                        <a href="info.html" style="text-decoration: none;">
-                        <div class="card" style="background-color: #0E45B7;">
-                            <div class="card-body text-white">
-                                <img src="images/personal_info.svg"/>
-                                <br/><br/>
-                                <h5 class="card-title">Personal Info</h5>
-                                <p class="card-text">Provide personal details and how we can reach you</p>
-                            </div>
-                        </div>
-                        </a>
-                    </div>
-                    <br/>
-                    <div class="col-md-6 col-sm-12">
-                        <a href="reset.html" style="text-decoration: none;">
-                        <div class="card" style="background-color: #0E45B7;">
+                        <div class="card" style="background-color: inherit;">
                             <div class="card-body text-white">
                                 <img src="images/security.svg"/>
                                 <br/><br/>
                                 <h5 class="card-title">Login & Security</h5>
-                                <p class="card-text">Update your password and secure your account</p>
-                            </div>
-                        </div>
-                        </a>
-                    </div>
-                    <br/>
-                    <div class="col-md-6 col-sm-12">
-                        <a href="preferences.html" style="text-decoration: none;">
-                        <div class="card" style="background-color: #0E45B7;">
-                            <div class="card-body text-white">
-                                <img src="images/preferences.svg"/>
-                                <br/><br/>
-                                <h5 class="card-title">Global Preferences</h5>
-                                <p class="card-text">Set your default language, currency, and timezone</p>
-                            </div>
-                        </div>
-                        </a>
-                    </div>
-                    <br/>
-                    <div class="col-md-6 col-sm-12">
-                        <div class="card" style="background-color: #0E45B7;">
-                            <div class="card-body text-white">
-                                <img src="images/referral.svg"/>
-                                <br/><br/>
-                                <h5 class="card-title">Referral credit & coupon</h5>
-                                <p class="card-text">You have $0 referral credits and coupon. Learn more.</p>
+                                <br/>
+                                <form>
+                                    <div class="mb-3">
+                                        <label for="disabledInput" class="form-label">Email</label>
+                                        <input type="text" id="disabledInput" class="form-control" value="hkhan107@myseneca.ca" disabled>
+                                    </div>
+                                    <button class="btn btn-outline-primary search_btn">Reset Password</button>
+                                    <button class="btn btn-outline-primary search_btn" style="margin-left: 10px;">Enable 2FA</button>
+                                </form>
                             </div>
                         </div>
                     </div>
