--- a/HomeLink/preferences.html
+++ b/HomeLink/preferences.html
@@ -154,55 +154,52 @@
                         <h3>Settings</h3>
                     </div>
                     <div class="col-md-6 col-sm-12">
-                        <a href="info.html" style="text-decoration: none;">
-                        <div class="card" style="background-color: #0E45B7;">
-                            <div class="card-body text-white">
-                                <img src="images/personal_info.svg"/>
-                                <br/><br/>
-                                <h5 class="card-title">Personal Info</h5>
-                                <p class="card-text">Provide personal details and how we can reach you</p>
-                            </div>
-                        </div>
-                        </a>
-                    </div>
-                    <br/>
-                    <div class="col-md-6 col-sm-12">
-                        <a href="reset.html" style="text-decoration: none;">
-                        <div class="card" style="background-color: #0E45B7;">
-                            <div class="card-body text-white">
-                                <img src="images/security.svg"/>
-                                <br/><br/>
-                                <h5 class="card-title">Login & Security</h5>
-                                <p class="card-text">Update your password and secure your account</p>
-                            </div>
-                        </div>
-                        </a>
-                    </div>
-                    <br/>
-                    <div class="col-md-6 col-sm-12">
-                        <a href="preferences.html" style="text-decoration: none;">
-                        <div class="card" style="background-color: #0E45B7;">
+                        <div class="card" style="background-color: inherit;">
                             <div class="card-body text-white">
                                 <img src="images/preferences.svg"/>
                                 <br/><br/>
                                 <h5 class="card-title">Global Preferences</h5>
-                                <p class="card-text">Set your default language, currency, and timezone</p>
+                                <br/>
+                                <form>
+                                <div class="mb-3">
+                                    <label for="languageDropdown" class="form-label">Language</label>
+                                    <select class="form-select" id="languageDropdown" aria-label="Language">
+                                        <option selected>Select language</option>
+                                        <option value="1" selected>English</option>
+                                        <option value="2">Spanish</option>
+                                        <option value="3">French</option>
+                                        <!-- Add more language options here if needed -->
+                                    </select>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="currencyDropdown" class="form-label">Currency</label>
+                                    <select class="form-select" id="currencyDropdown" aria-label="Currency">
+                                        <option selected>Select currency</option>
+                                        <option value="CAD" selected>CAD - Canadian Dollar</option>
+                                        <option value="USD">USD - US Dollar</option>
+                                        <option value="EUR">EUR - Euro</option>
+                                        <option value="GBP">GBP - British Pound</option>
+                                        <!-- Add more currency options here if needed -->
+                                    </select>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="timezoneDropdown" class="form-label">Timezone</label>
+                                    <select class="form-select" id="timezoneDropdown" aria-label="Timezone">
+                                        <option selected>Select timezone</option>
+                                        <option value="UTC-5" selected>UTC-5</option>
+                                        <option value="UTC-12">UTC-12</option>
+                                        <option value="UTC-11">UTC-11</option>
+                                        <option value="UTC-10">UTC-10</option>
+                                        <!-- Add more timezone options here if needed -->
+                                    </select>
+                                </div>
+                                <!-- Add more form controls here if needed -->
+                                <button type="submit" class="btn btn-outline-primary">Update Preferences</button>
+                            </form>
                             </div>
                         </div>
-                        </a>
                     </div>
-                    <br/>
-                    <div class="col-md-6 col-sm-12">
-                        <div class="card" style="background-color: #0E45B7;">
-                            <div class="card-body text-white">
-                                <img src="images/referral.svg"/>
-                                <br/><br/>
-                                <h5 class="card-title">Referral credit & coupon</h5>
-                                <p class="card-text">You have $0 referral credits and coupon. Learn more.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <br/>
+        
                 
             </div>
         </div>
