--- a/HomeLink/index.html
+++ b/HomeLink/index.html
@@ -185,6 +185,7 @@
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3 mb-4">
+            <a href="lighting.html" style="text-decoration: none;">
             <div class="card custom-card-colour">
               <div class="card-body" style="margin-bottom: 5vh;">
                 <h5 class="card-title">Lighting</h5>
@@ -193,16 +194,19 @@
                 </div>
               </div>
             </div>
+            </a>
           </div>
           <div class="col-12 col-md-6 col-lg-3 mb-4">
+            <a href="security.html" style="text-decoration: none;">
             <div class="card custom-card-colour">
               <div class="card-body" style="margin-bottom: 5vh;">
                 <h5 class="card-title">Security</h5>
                 <div class="form-check form-switch">
-                  <input class="form-check-input" type="checkbox" id="mySwitch">
+                  <input class="form-check-input" type="checkbox" id="mySwitch" checked>
                 </div>
               </div>
             </div>
+            </a>
           </div>
         </div>
         <div class="col-sm-12 mb-3 mb-sm-0 mt-4">
