--- a/HomeLink/index.html
+++ b/HomeLink/index.html
@@ -190,7 +190,7 @@
               <div class="card-body" style="margin-bottom: 5vh;">
                 <h5 class="card-title">Lighting</h5>
                 <div class="custom-control form-check form-switch">
-                  <input class="form-check-input custom_control_input" type="checkbox" id="mySwitch">
+                  <input class="form-check-input custom_control_input" type="checkbox" id="mySwitch" checked>
                 </div>
               </div>
             </div>
