--- a/HomeLink/security.html
+++ b/HomeLink/security.html
@@ -172,13 +172,13 @@
 
                                     <div class="custom-control form-check form-switch">
                                         <label>Garage Camera</label>
-                                        <input class="form-check-input custom_control_input" type="checkbox" id="mySwitch">
+                                        <input class="form-check-input custom_control_input" type="checkbox" id="mySwitch" checked>
                                     </div>
                                     <br/>
 
                                     <div class="custom-control form-check form-switch">
                                         <label>Backyard Camera</label>
-                                        <input class="form-check-input custom_control_input" type="checkbox" id="mySwitch">
+                                        <input class="form-check-input custom_control_input" type="checkbox" id="mySwitch" checked>
                                     </div>
                                     <br/>
                                 </form>
